taller4/ejercicio2/letschat-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: letschat
  labels:
    app: letschat
    tier: frontend
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: http-server
  selector:
    app: letschat
    tier: frontend
