taller4/ejercicio2/mongo-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  labels:
    app: mongo
    tier: backend
spec:
  type: 
  ports:
  - port: 27017
    targetPort: mongo-server
  selector:
    app: mongo
    tier: backend
